Updated 2 files via CloudCannon.

--- a/dining.html
+++ b/dining.html
@@ -60,6 +60,9 @@ blocks:
                 -
                     img: /uploads/taru-1.jpg
                     alt: Taru
+                -
+                    img: /uploads/taru-2.jpg
+                    alt: ''
         color-scheme: base
         scheme-padding: small-padding
         scheme-max-width: l
@@ -94,6 +97,9 @@ blocks:
                 -
                     img: /uploads/beach-house-2.jpg
                     alt: Beach House
+                -
+                    img: /uploads/dining-beach-house2-1.jpg
+                    alt: ''
         color-scheme: base
         scheme-padding: small-padding
         scheme-max-width: l
@@ -179,11 +185,8 @@ blocks:
             dots: true
             slides:
                 -
-                    img:
-                    alt: Pool bar
-                -
-                    img: /uploads/pool-bar2.jpg
-                    alt: Pool bar
+                    img: /uploads/the-lounge.jpg
+                    alt: The Lounge
         color-scheme: base
         scheme-padding: small-padding
         scheme-max-width: l
@@ -208,11 +211,8 @@ blocks:
             dots: true
             slides:
                 -
-                    img:
-                    alt: Pool bar
-                -
-                    img: /uploads/pool-bar2.jpg
-                    alt: Pool bar
+                    img: /uploads/cure-chef.jpg
+                    alt: Cure
         color-scheme: base
         scheme-padding: small-padding
         scheme-max-width: l
