--- a/index.html
+++ b/index.html
@@ -232,35 +232,35 @@ blocks:
                 background-desktop-image: /uploads/taru1.jpg
                 background-mobile-image: /uploads/taru1.jpg
                 block-content-html: >-
-                    <h3 class="large-heading-serif">Taru</h2><p>The signature culinary
-                    destination of the resort, Taru offers an immersive dining
-                    experience, through reinvented authentic flavours of
+                    <h3 class="large-heading-serif">Taru</h3><p>The signature
+                    culinary destination of the resort, Taru offers an immersive
+                    dining experience, through reinvented authentic flavours of
                     essential Indonesian dishes, innovated by touches of modern
                     cooking techniques and ingredients, balanced with
-                    contrasting international specialties.</p><p>07.00 am -
-                    10.00 pm  </p>
+                    contrasting international specialties.</p><p>Open 07.00 am -
+                    10.00 pm every day.</p>
                 button-link: /dining-taru
                 button-text: Discover Taru
             -
                 background-desktop-image: /uploads/beach-house-1.jpg
                 background-mobile-image: /uploads/beach-house-1.jpg
                 block-content-html: >-
-                    <h3 class="large-heading-serif">Beach House</h2><p>A stunning
-                    addition to the Canggu coastline, the Beach House lures with
-                    its shimmering pool, and ocean breeze. An ideal setting for
-                    craft cocktails and the delicate flavours of the
-                    sea.</p><p>Open 8am - 10pm every day. </p>
+                    <h3 class="large-heading-serif">Beach House</h3><p>A
+                    stunning addition to the Canggu coastline, the Beach House
+                    lures with its shimmering pool, and ocean breeze. An ideal
+                    setting for craft cocktails and the delicate flavours of the
+                    sea.</p><p>Open 08.00 am - 10.00 pm every day.</p>
                 button-link: /dining-beach-house
                 button-text: Discover Beach House
             -
                 background-desktop-image: /uploads/sazon-1.jpg
                 background-mobile-image: /uploads/sazon-1.jpg
                 block-content-html: >-
-                    <h3 class="large-heading-serif">Sazón<p>Led by award-winning Chef
-                    Andrew Walsh, experience the neighborhood Mediterranean
-                    hideaway on Batu Bolong, where vibrant atmosphere meets
-                    authentic flavours.</p><p>Mon - Thurs 06.00 pm - 12.00
-                    am</p><p>Fri - Sun 12.00 pm</p></h3>
+                    <h3 class="large-heading-serif">Sazón</h3><p>Led by
+                    award-winning Chef Andrew Walsh, experience the neighborhood
+                    Mediterranean hideaway on Batu Bolong, where vibrant
+                    atmosphere meets authentic flavours.</p><p>Mon - Thurs 06.00
+                    pm - 12.00 am<br />Fri - Sun 12.00 pm</p>
                 button-link: https://sazonbali.com
                 button-text: Discover Sazón
         color-scheme: mint-300
