Updated 4 files via CloudCannon.

--- a/Wellness.html
+++ b/Wellness.html
@@ -40,14 +40,15 @@ blocks:
     -
         _id: banner-split-video
         block-content-html: >-
-            <h3 class="sub-heading">REGENT SPA</h3><h2 class="heading-lg">Uplift
-            your mind &amp; elevate your senses.</h2><p>Unveiling in October
-            2025, the extensive Regent Spa &amp; Wellness experience invites you
-            on a transformative path where the mind resets and the senses are
-            elevated. Each step is guided by a clear intent to heal, weaving
-            vibrating crystal energy, soothing aromas, and restoring light
-            frequency to uplift wellbeing to new personal heights.</p> <p><a
-            class="button-featured" href="/SUITES-and-VILLAS#booking-section">reserve now</a></p>
+            <h3 class="sub-heading">REGENT SPA &amp; WELLNESS</h3><h2
+            class="heading-lg"><strong>Reset Your Mind &amp; Elevate Your
+            Senses</strong></h2><p>The extensive Regent Spa &amp; Wellness
+            experience invites you on a transformative path where the mind
+            resets and the senses are elevated. Each step is guided by a clear
+            intent to heal, weaving vibrating crystal energy, soothing aromas,
+            and restoring light frequency to uplift wellbeing to new personal
+            heights.</p> <p><a class="button-featured"
+            href="/SUITES-and-VILLAS#booking-section">reserve now</a></p>
         background-desktop-image: /uploads/sense-of-harmony.jpg
         background-mobile-image: /uploads/sense-of-harmony.jpg
         videos:
@@ -66,14 +67,14 @@ blocks:
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
-            <h3 class="text-center">SPA &amp; WELLNESS OFFERINGS</h3><p
-            class="text-center"> </p><h2 class="text-center">Explore our
-            treatments</h2><p class="text-center">Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-            exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-            esse cillum dolore eu fugiat nulla pariatur.</p>
+            <h3 class="text-center">SPA &amp; WELLNESS TREATMENTS</h3><p
+            class="text-center"> </p><h2 class="text-center">Elevate Above The
+            Noise</h2><p class="text-center">Regent Spa &amp; Wellness invites
+            you on a discreet journey of wellbeing, where the mind is reset, the
+            senses are awakened, and emotions are gently stirred.</p><p>Each
+            experience is interwoven with meticulously curated treatments,
+            thoughtfully designed with intention — to heal, to restore, to
+            elevate.</p>
         image-width: max(36%, 8rem)
         mobile-image-width: 80%
         img_aspect: Square
