Updated 1 file via CloudCannon.

--- a/Wellness.html
+++ b/Wellness.html
@@ -71,7 +71,7 @@ blocks:
             class="text-center"> </p><h2 class="text-center">Elevate Above The
             Noise</h2><p class="text-center">Regent Spa &amp; Wellness invites
             you on a discreet journey of wellbeing, where the mind is reset, the
-            senses are awakened, and emotions are gently stirred.</p><p>Each
+            senses are awakened, and emotions are gently stirred. <br />Each
             experience is interwoven with meticulously curated treatments,
             thoughtfully designed with intention — to heal, to restore, to
             elevate.</p>
