Updated 1 file via CloudCannon.

--- a/Wellness.html
+++ b/Wellness.html
@@ -84,9 +84,10 @@ blocks:
             -
                 image: /uploads/treatment1.jpg
                 block-content-html: >-
-                    <h3 class="heading">Signature Sand bed</h3> <p>Lorem ipsum
-                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut.</p><p></p>
+                    <h3 class="heading">Rituals</h3> <p>Where time slows and
+                    intention deepens, immersive wellness journeys that weave
+                    ancient rituals with modern serenity to restore balance from
+                    the inside out.</p><p></p>
                 link:
                 reserve-link:
                 button:
@@ -95,9 +96,10 @@ blocks:
             -
                 image: /uploads/treatment2.jpg
                 block-content-html: >-
-                    <h3 class="heading">Traditional Massages</h3> <p>Lorem ipsum
-                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut.</p>
+                    <h3 class="heading">Upgraded Massages</h3> <p>Elevated
+                    massage alchemy, crafted with warm elements, crystal energy,
+                    and intuitive touch, a deeper, more soulful way to soften
+                    the body and still the mind.</p>
                 link:
                 reserve-link:
                 button:
@@ -106,9 +108,11 @@ blocks:
             -
                 image: /uploads/treatment3.jpg
                 block-content-html: >-
-                    <h3 class="heading">Facial rejuvenation</h3> <p>Lorem ipsum
-                    dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut.</p>
+                    <h3 class="heading">Extra-everything Facials</h3>
+                    <p>Transformative, couture-level facials that marry
+                    high-performance skin technology with restorative touch,
+                    revealing a lifted, luminous complexion that glows from
+                    within.</p>
                 link:
                 reserve-link:
                 button:
