Updated 2 files via CloudCannon.

--- a/meetings-and-events.html
+++ b/meetings-and-events.html
@@ -90,9 +90,11 @@ blocks:
             -
                 image: /uploads/wedding-scroll1.jpg
                 block-content-html: >-
-                    <h3 class="heading">Beach House</h3> <p>Lorem ipsum dolor
-                    sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut.</p><p></p>
+                    <h3 class="heading">BEACH HOUSE </h3> <p>A breezy oceanfront
+                    setting perfect for elevated social gatherings where sunlit
+                    terraces, sea views, and effortless sophistication create
+                    the ideal backdrop for intimate celebrations and relaxed
+                    private events.</p><p></p>
                 size: 1458 sqm
                 capacity: 120
                 banquet: 120
@@ -102,9 +104,11 @@ blocks:
             -
                 image: /uploads/wedding-scroll2.jpg
                 block-content-html: >-
-                    <h3 class="heading">BEACH LAWN</h3> <p>Lorem ipsum dolor sit
-                    amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut.</p>
+                    <h3 class="heading">BEACH LAWN</h3> <p>A breathtaking
+                    coastal lawn designed for unforgettable moments, offering a
+                    sweeping ocean panorama that transforms weddings,
+                    ceremonies, and al fresco events into scenes of pure
+                    cinematic beauty.</p>
                 size: 1458 sqm
                 capacity: 120
                 banquet: 120
@@ -114,9 +118,11 @@ blocks:
             -
                 image: /uploads/dsc016841-1-2.jpg
                 block-content-html: >-
-                    <h3 class="heading">CHEFS TABLE</h3> <p>Lorem ipsum dolor
-                    sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut.</p>
+                    <h3 class="heading">CHEFS TABLE</h3> <p>A captivating venue
+                    for extraordinary culinary occasions, where guests gather
+                    around the chef’s stage to experience an intimate,
+                    story-driven dining journey crafted exclusively for special
+                    events.</p>
                 size: 1458 sqm
                 capacity: 120
                 banquet: 120
