Updated 1 file via CloudCannon.

--- a/Experiences.html
+++ b/Experiences.html
@@ -38,9 +38,9 @@ blocks:
             subHeading: GATEWAY TO BALI
             heading:
             p-text: >-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod  tempor incididunt ut labore et dolore magna
-                aliqua.</p>
+                <p>A refined haven from which to explore the Island of the Gods,
+                seamlessly connecting you to Bali’s culture, landscapes, and
+                timeless spirit.</p>
             button:
             text: Discover More
             url: '#'
@@ -52,9 +52,9 @@ blocks:
             subHeading: IN THE HEART OF CANGGU
             heading:
             p-text: >-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua.</p>
+                <p>Perfectly positioned in Canggu’s vibrant coastal enclave,
+                placing the best of Bali’s dining, surf, and boutiques just
+                moments from your door.</p>
             button:
             text: Discover More
             url: '#'
@@ -63,20 +63,19 @@ blocks:
             src: /uploads/experience2.jpg
             title: Experience
         scheme:
-            scheme-color: base
+            scheme-color: '#000000'
             scheme-padding: small-padding
             scheme-max-width: l
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
-            <h3 class="sub-heading">AT THE RESORT &amp; NEARBY</h3><p class="">
-            </p><h2 class="large-heading">Experiences at Regent Bali
-            Canggu</h2><p class="">Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-            exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-            esse cillum dolore eu fugiat nulla pariatur.</p>
+            <h3 class="sub-heading">AT THE RESORT &amp; NEARBY</h3><p> </p><h2
+            class="large-heading">Experiences at Regent Bali Canggu</h2><p>At
+            Regent Bali Canggu, every moment is shaped with intention — from
+            restorative rituals and oceanfront leisure to cultural encounters
+            that bring the island’s traditions closer. Whether you choose to
+            linger within the resort or venture into the village, meaningful
+            experiences unfold at your own pace.</p>
         image-width: max(80%, 8rem)
         mobile-image-width: 80%
         img_aspect: Wide Landscape
@@ -86,10 +85,17 @@ blocks:
             -
                 image: /uploads/experiences1.jpg
                 block-content-html: >-
-                    <h2>School of Surf</h2> <p>Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut.</p><p></p>
-                link:
+                    <h2>School of Surf</h2> <p>Ride the waves along the iconic
+                    shores of Pantai Batu Bolong with a curated surf lesson led
+                    by internationally certified instructors from the Rip Curl
+                    School of Surf. Taking place just steps from the resort,
+                    each 1.5-hour session is tailored to all levels, from first
+                    timers learning essential techniques to experienced surfers
+                    refining their skills. Optional photo and drone captures are
+                    available to preserve each moment. Ideal for solo travellers
+                    or shared adventures, this immersive experience connects you
+                    to the rhythm of the sea.</p><p></p>
+                link: mailto:concierge@regentbalicanggu.com
                 reserve-link:
                 button:
                     text: learn more
@@ -105,7 +111,7 @@ blocks:
                     convenience, exclusivity, and breathtaking views, our
                     private helicopter arrival ensures you bypass road traffic
                     and arrive in tranquil style.</p>
-                link:
+                link: mailto:concierge@regentbalicanggu.com
                 reserve-link:
                 button:
                     text: learn more
@@ -114,14 +120,13 @@ blocks:
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
-            <h3 class="sub-heading">AROUND THE ISLAND</h3><p class=""> </p><h2
-            class="large-heading">Explore the island with curated
-            experiences</h2><p class="">Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-            exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-            esse cillum dolore eu fugiat nulla pariatur.</p>
+            <h3 class="sub-heading">AROUND THE ISLAND</h3><p> </p><h2
+            class="large-heading">Explore the Island with Curated
+            Experiences</h2><p>Journey beyond the coastline and discover Bali’s
+            rich tapestry of temples, artisans, landscapes, and communities,
+            guided by experiences crafted to reveal the island’s true character.
+            Each excursion is thoughtfully curated, allowing you to explore with
+            ease, comfort, and a sense of quiet connection.</p>
         image-width: max(80%, 8rem)
         mobile-image-width: 80%
         img_aspect: Wide Landscape
