--- a/Experiences.html
+++ b/Experiences.html
@@ -62,10 +62,7 @@ blocks:
         image-2:
             src: /uploads/experience2.jpg
             title: Experience
-        scheme:
-            scheme-color: '#000000'
-            scheme-padding: small-padding
-            scheme-max-width: l
+        color-scheme: base
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
