--- a/Wellness.html
+++ b/Wellness.html
@@ -149,10 +149,7 @@ blocks:
         image-2:
             src: /uploads/cold-plunge-pool-1.jpg
             title: Sauna
-        scheme:
-            scheme-color: base
-            scheme-padding: small-padding
-            scheme-max-width: l
+        color-scheme: base
     -
         _id: grid-simple-2-col-overlap
         desktop-image-position: left
