Updated 2 files via CloudCannon.

--- a/dining.html
+++ b/dining.html
@@ -196,11 +196,11 @@ blocks:
             subHeading: CURE
             heading:
             p-text: >-
-                <p>Taking cues from Chef Andrew Walsh’s Singapore flagship that
-                earned him the coveted Michelin Star, immerse in a journey
-                through the acclaimed Chef’s Irish heritage, guided by the
-                flavors of Nordic European waters and the untamed
-                wilderness.</p><p>Opening in 2025.</p>
+                <p>CURE Bali presents contemporary French cooking through the
+                lens of Asia’s rich terroir, guided by Chef-Owner Andrew Walsh.
+                The menu reimagines traditional flavours with refined techniques
+                and seasonal ingredients, seamlessly blending heritage and
+                innovation. </p><p>Opening in end of Q1 2026.</p>
             buttons:
                 -
                     text:
