Updated 1 file via CloudCannon.

--- a/dining.html
+++ b/dining.html
@@ -42,8 +42,7 @@ blocks:
             buttons:
                 -
                     text: Discover more
-                    url: >-
-                        https://www.ihg.com/regent/hotels/us/en/bali/dpscr/hoteldetail/dining/taru
+                    url: /dining-taru.html
                     color-scheme: mint-500
                 -
                     text: RESERVE A TABLE
@@ -79,8 +78,7 @@ blocks:
             buttons:
                 -
                     text: Discover more
-                    url: >-
-                        https://www.ihg.com/regent/hotels/us/en/bali/dpscr/hoteldetail/dining/beach-house
+                    url: /dining-beach-house.html
                     color-scheme: mint-500
                 -
                     text: Reserve a Table
