Updated 7 files via CloudCannon.

--- a/Wellness.html
+++ b/Wellness.html
@@ -122,7 +122,7 @@ blocks:
     -
         _id: offset-grid
         content-1:
-            subHeading: COLD PLUGE & POOL
+            subHeading: COLD PLUNGE & POOL
             heading:
             p-text: >-
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
