--- a/Experiences.html
+++ b/Experiences.html
@@ -144,7 +144,7 @@ blocks:
                     text: learn more
                     url: '#'
             -
-                image: /uploads/lontar.jpg
+                image: /uploads/lontar2.jpg
                 block-content-html: >-
                     <h2><strong>Balinese Lontar Engraving</strong></h2>
                     <p>Lontar engraving unveils the secrets of a traditional
