--- a/weddings-and-events.html
+++ b/weddings-and-events.html
@@ -31,9 +31,9 @@ blocks:
             beachfront location, coupled with the above and beyond nature of
             Regent service, will assure a memorable event.</p>
         bottom-text:
-                block-content-html: 
-                    links:
-                    - 
+            block-content-html:
+                links:
+                    -
                         text: +62 361 201 9999
                         url: tel:623612019999
                     -
@@ -90,9 +90,11 @@ blocks:
             -
                 image: /uploads/wedding-scroll1.jpg
                 block-content-html: >-
-                    <h3 class="heading">Beach House</h3> <p>Lorem ipsum dolor
-                    sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut.</p><p></p>
+                    <h3 class="heading">BEACH HOUSE </h3> <p>A breezy oceanfront
+                    setting perfect for elevated social gatherings where sunlit
+                    terraces, sea views, and effortless sophistication create
+                    the ideal backdrop for intimate celebrations and relaxed
+                    private events.</p><p></p>
                 size: 1458 sqm
                 capacity: 120
                 banquet: 120
@@ -102,26 +104,30 @@ blocks:
             -
                 image: /uploads/wedding-scroll2.jpg
                 block-content-html: >-
-                    <h3 class="heading">BEACH LAWN</h3> <p>Lorem ipsum dolor sit
-                    amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut.</p>
-                size: 1458 sqm
-                capacity: 120
-                banquet: 120
-                reception: 150
-                long-table: 100
+                    <h3 class="heading">BEACH LAWN</h3> <p>A breathtaking
+                    coastal lawn designed for unforgettable moments, offering a
+                    sweeping ocean panorama that transforms weddings,
+                    ceremonies, and al fresco events into scenes of pure
+                    cinematic beauty.</p>
+                size: 493 sqm
+                capacity: 110
+                banquet: 80
+                reception: 100
+                long-table: 60
                 link:
             -
                 image: /uploads/dsc016841-1-2.jpg
                 block-content-html: >-
-                    <h3 class="heading">CHEFS TABLE</h3> <p>Lorem ipsum dolor
-                    sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut.</p>
-                size: 1458 sqm
-                capacity: 120
-                banquet: 120
-                reception: 150
-                long-table: 100
+                    <h3 class="heading">CHEF'S TABLE</h3> <p>A captivating venue
+                    for extraordinary culinary occasions, where guests gather
+                    around the chef’s stage to experience an intimate,
+                    story-driven dining journey crafted exclusively for special
+                    events.</p>
+                size: 233 sqm
+                capacity: 18
+                banquet: 18
+                reception: 0
+                long-table: 0
                 link:
         color-scheme: base
     -
