Updated 4 files via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -73,7 +73,8 @@ blocks:
                         extra-buttons:
                             -
                                 text: Virtual Tour
-                                link: /uploads/virtual-tours/Studio-Suite/index.html
+                                link: >-
+                                    /uploads/virtual-tours/Studio-Suite/index.html
                     -
                         name: Lagoon Access Twin
                         size: 818
@@ -114,7 +115,8 @@ blocks:
                         extra-buttons:
                             -
                                 text: Virtual Tour
-                                link: /uploads/virtual-tours/Studio-Suite/index.html
+                                link: >-
+                                    /uploads/virtual-tours/Studio-Suite/index.html
                     -
                         name: Studio Suite King
                         size: 818
@@ -139,7 +141,8 @@ blocks:
                         extra-buttons:
                             -
                                 text: Virtual Tour
-                                link: /uploads/virtual-tours/Studio-Suite/index.html
+                                link: >-
+                                    /uploads/virtual-tours/Studio-Suite/index.html
                         images:
                             -
                                 image: /uploads/rooms/Studio-Suites-King-Bed.jpg
@@ -183,7 +186,8 @@ blocks:
                         extra-buttons:
                             -
                                 text: Virtual Tour
-                                link: /uploads/virtual-tours/Studio-Suite/index.html
+                                link: >-
+                                    /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: /uploads/floorplan-1br.jpeg
                     -
                         name: Lagoon Access King
@@ -220,7 +224,8 @@ blocks:
                         extra-buttons:
                             -
                                 text: Virtual Tour
-                                link: /uploads/virtual-tours/Studio-Suite/index.html
+                                link: >-
+                                    /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: >-
                             /uploads/regentbalicanggu-onebedroomsuite-lagoonaccess.jpeg
                     -
@@ -254,7 +259,8 @@ blocks:
                         extra-buttons:
                             -
                                 text: Virtual Tour
-                                link: /uploads/virtual-tours/Studio-Suite/index.html
+                                link: >-
+                                    /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: /uploads/rooms/floorplan-One-Bedroom-Suite.jpg
             -
                 heading: TWO BEDROOM SUITE
@@ -287,7 +293,8 @@ blocks:
                         extra-buttons:
                             -
                                 text: Virtual Tour
-                                link: /uploads/virtual-tours/Studio-Suite/index.html
+                                link: >-
+                                    /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: /uploads/floorplan-2br.jpeg
                     -
                         name: Two Bedroom Suite
@@ -322,7 +329,8 @@ blocks:
                         extra-buttons:
                             -
                                 text: Virtual Tour
-                                link: /uploads/virtual-tours/Studio-Suite/index.html
+                                link: >-
+                                    /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: /uploads/floorplan-2br-1.jpeg
             -
                 heading: PREMIUM ONE BEDROOM SUITE
@@ -355,7 +363,8 @@ blocks:
                         extra-buttons:
                             -
                                 text: Virtual Tour
-                                link: /uploads/virtual-tours/Studio-Suite/index.html
+                                link: >-
+                                    /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: /uploads/premium-floorplan-dpscr.jpeg
                     -
                         name: Lagoon Access King
@@ -376,7 +385,8 @@ blocks:
                         extra-buttons:
                             -
                                 text: Virtual Tour
-                                link: /uploads/virtual-tours/Studio-Suite/index.html
+                                link: >-
+                                    /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: >-
                             /uploads/rooms/floorplan-Premium-One-Bedroom-Suite.jpg
                     -
@@ -401,7 +411,8 @@ blocks:
                         extra-buttons:
                             -
                                 text: Virtual Tour
-                                link: /uploads/virtual-tours/Studio-Suite/index.html
+                                link: >-
+                                    /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: /uploads/premium-floorplan-dpscr.jpeg
             -
                 heading: PRIVATE villas
@@ -434,7 +445,8 @@ blocks:
                         extra-buttons:
                             -
                                 text: Virtual Tour
-                                link: /uploads/virtual-tours/Studio-Suite/index.html
+                                link: >-
+                                    /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: /uploads/beachvilla-floorplan.jpeg
                     -
                         name: Garden Pool Villa
@@ -459,7 +471,8 @@ blocks:
                         extra-buttons:
                             -
                                 text: Virtual Tour
-                                link: /uploads/virtual-tours/Studio-Suite/index.html
+                                link: >-
+                                    /uploads/virtual-tours/Studio-Suite/index.html
                         tour-pic: /uploads/regentbalicanggu-gardenvilla-1.jpeg
             -
                 heading: PENTHOUSE
@@ -494,7 +507,8 @@ blocks:
                         extra-buttons:
                             -
                                 text: Virtual Tour
-                                link: /uploads/virtual-tours/Studio-Suite/index.html
+                                link: >-
+                                    https://my.3dscan.id/en/tour/regent-penthouse-day
                         tour-pic: /uploads/penthouse-floorplan.jpeg
         color-scheme: mint-400
         min-height: 50vh
