Updated 5 files via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -83,11 +83,16 @@ blocks:
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
-            <h3>OUR ROOMS &amp; SUITES</h3><h2 class="heading-lg">Stay at Regent
-            Bali Canggu</h2><p>Espouse your preference of the one hundred and
-            fifty oceanside havens, including those with unrivalled sea or
-            garden vistas, direct lagoon-access, as well as a variety of suites,
-            two-bedroom penthouses and expansive villas with private pools.</p>
+            <h3>SUITES &amp; VILLAS</h3><h2 class="heading-lg">Stay at Regent
+            Bali Canggu</h2><p>Discover one hundred and fifty private havens at
+            Regent Bali Canggu, a luxury resort in Canggu, Bali designed for
+            travellers who value space, serenity and graceful refinement.
+            Explore a curated collection of luxury suites with calming garden or
+            resort vistas, elegant residences with direct lagoon access,
+            spacious penthouse and expansive private villas with pools. Each
+            sanctuary is crafted with soft textures, natural materials and a
+            quiet sense of luxury, offering an environment where time slows and
+            every comfort feels effortlessly considered.</p>
         block-content-max-width: 40rem
         image-width: max(36%, 10rem)
         mobile-image-width: 80%
