Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -102,30 +102,72 @@ blocks:
             -
                 image: /uploads/oceanfront-penthouse.jpg
                 block-content-html: >-
-                    <h2>Oceanfront Penthouse Suite</h2> <p>Perched above the
-                    shore, the two-bedroom penthouse offers ocean horizons, a
-                    private infinity pool, and Regent Club privileges—an
-                    intimate retreat of refinement, indulgence, and serene
-                    coastal living.</p>
+                    <h2>Two Bedroom Penthouse Oceanfront with Private Pool</h2>
+                    <p>Perched above the shore, the two-bedroom penthouse offers
+                    ocean horizons, a private infinity pool, and Regent Club
+                    privileges—an intimate retreat of refinement, indulgence,
+                    and serene coastal living.</p>
                 link:
                 reserve-link: /suites-and-villas
                 button:
                     text: learn more
                     url:
             -
-                image: /uploads/private-beach-villa.jpg
+                image: /uploads/rooms/Beach-Villa-Pool.jpg
                 block-content-html: >-
-                    <h2>Private Beach Villa</h2> <p>Ocean horizons greet each
-                    morning, while a private pool and teak bath invite
-                    stillness. With curated spirits and butler care, your villa
-                    is a sanctuary by the sea.</p>
+                    <h2>⁠One Bedroom Beachfront Pool Villa</h2> <p>Awaken to
+                    sweeping ocean views from the master bedroom, living room,
+                    and your private 30 sqm pool. The ensuite bathroom features
+                    indoor and outdoor rain showers, and a beautiful teak
+                    bathtub. Step into your outdoor living space, the rhythm of
+                    the waves becomes a backdrop to your peaceful haven.</p>
                 link:
                 reserve-link: /suites-and-villas
                 button:
                     text: learn more
                     url:
             -
-                image: /uploads/studio-suites-1.jpg
+                image: /uploads/rooms/Garden-Villa-Private-Pool.jpg
+                block-content-html: <h2>One Bedroom Garden Pool Villa</h2> <p>lorem ipsum</p>
+                link:
+                reserve-link: /suites-and-villas
+                button:
+                    text: learn more
+                    url:
+            -
+                image: /uploads/rooms/Two-Bedroom-Suite.jpg
+                block-content-html: <h2>Two Bedroom Suite</h2> <p>Lorem Ipsum</p>
+                link:
+                reserve-link: /suites-and-villas
+                button:
+                    text: learn more
+                    url:
+            -
+                image: /uploads/rooms/Premium-One-Bedroom-Suite-Living.jpg
+                block-content-html: <h2>⁠Premium One Bedroom Suite</h2> <p>Lorem Ipsum</p>
+                link:
+                reserve-link: /suites-and-villas
+                button:
+                    text: learn more
+                    url:
+            -
+                image: /uploads/rooms/One-Bedroom-Suite-Lagoon-Access-Terrace.JPG
+                block-content-html: <h2>⁠One Bedroom Suite Lagoon Access</h2> <p>Lorem Ipsum</p>
+                link:
+                reserve-link: /suites-and-villas
+                button:
+                    text: learn more
+                    url:
+            -
+                image: /uploads/rooms/Studio-Suites-Bedroom.jpg
+                block-content-html: <h2>One Bedroom Suite</h2> <p>Lorem Ipsum</p>
+                link:
+                reserve-link: /suites-and-villas
+                button:
+                    text: learn more
+                    url:
+            -
+                image: /uploads/rooms/Studio-Suites-Ocean-View.jpg
                 block-content-html: >-
                     <h2>Studio Suite</h2> <p>Gaze across the Indian Ocean from
                     your private balcony. Indoors find a king bed and a serene
