Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -136,7 +136,16 @@ blocks:
                     url:
             -
                 image: /uploads/rooms/Two-Bedroom-Suite.jpg
-                block-content-html: <h2>Two Bedroom Suite</h2> <p>Lorem Ipsum</p>
+                block-content-html: >-
+                    <h2>Two Bedroom Suite</h2> <p>Positioned within lush
+                    tropical landscapes, the Studio Suite draws upon the
+                    artistry of Indonesian design, inviting quiet indulgence.
+                    Step onto the balcony to absorb Bali’s verdant beauty and
+                    vibrant blooms, gaze over the Indian ocean in an Ocean View,
+                    or step from your terrace directly into the turquoise pool
+                    with the Lagoon Access. A king bed offers serene comfort,
+                    while unlimited laundry, all‑day breakfast, and assistance
+                    from a Regent Experience Agent elevate your stay.</p>
                 link:
                 reserve-link: /suites-and-villas
                 button:
