Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -153,7 +153,13 @@ blocks:
                     url:
             -
                 image: /uploads/rooms/Premium-One-Bedroom-Suite-Living.jpg
-                block-content-html: <h2>⁠Premium One Bedroom Suite</h2> <p>Lorem Ipsum</p>
+                block-content-html: >-
+                    <h2>⁠Premium One Bedroom Suite</h2> <p>With panoramic views
+                    of the Indian Ocean, this generously sized suite captures
+                    the essence of elevated island living. A private terrace and
+                    light-filled interiors include a separate lounge, king bed,
+                    and a bathroom that pays homage to Balinese craft and
+                    detail.</p>
                 link:
                 reserve-link: /suites-and-villas
                 button:
