Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -167,15 +167,31 @@ blocks:
                     url:
             -
                 image: /uploads/rooms/One-Bedroom-Suite-Lagoon-Access-Terrace.JPG
-                block-content-html: <h2>⁠One Bedroom Suite Lagoon Access</h2> <p>Lorem Ipsum</p>
+                block-content-html: >-
+                    <h2>⁠One Bedroom Suite Lagoon Access</h2> <p>Positioned
+                    within lush tropical landscapes, the Studio Suite draws upon
+                    the artistry of Indonesian design, inviting quiet
+                    indulgence. Step onto the balcony to absorb Bali’s verdant
+                    beauty and vibrant blooms, gaze over the Indian ocean in an
+                    Ocean View, or step from your terrace directly into the
+                    turquoise pool with the Lagoon Access. A king bed offers
+                    serene comfort, while unlimited laundry, all‑day breakfast,
+                    and assistance from a Regent Experience Agent elevate your
+                    stay.</p>
                 link:
                 reserve-link: /suites-and-villas
                 button:
                     text: learn more
                     url:
             -
-                image: /uploads/rooms/Studio-Suites-Bedroom.jpg
-                block-content-html: <h2>One Bedroom Suite</h2> <p>Lorem Ipsum</p>
+                image: /uploads/rooms/One-Bedroom-Suite-Oceanview-Livingroom.jpg
+                block-content-html: >-
+                    <h2>One Bedroom Suite</h2> <p>Perched above the coastline,
+                    this One Bedroom Suite pairs tranquil seclusion with
+                    sweeping ocean views. A spacious living room opens onto a
+                    balcony, ideal for soaking in the surroundings. With two
+                    nights or more enjoy a 60-minute signature massage for
+                    two.</p>
                 link:
                 reserve-link: /suites-and-villas
                 button:
