Added % object position to highlights

--- a/index.html
+++ b/index.html
@@ -219,6 +219,11 @@ blocks:
                 nav-heading: Festive Season
                 heading: Festive Celebrations
                 image: /uploads/festive-season-highlight-image.avif
+                image-focus-point:
+                    percent-from-left: 21
+                    percent-from-top: 50
+                image-position-desktop: center top
+                image-position-mobile: center top
                 imag-alt:
                 text: >-
                     This festive season, indulge in extraordinary
@@ -232,6 +237,9 @@ blocks:
                 nav-heading: Michelin Master Series
                 heading: Where Michelin Stars Take the Stage
                 image: /uploads/michelin-master-series-highlight-image.avif
+                image-focus-point:
+                    percent-from-left: 64
+                    percent-from-top: 50
                 imag-alt:
                 text: >-
                     Regent Bali Canggu unveils the Michelin Master Series — a
@@ -246,6 +254,9 @@ blocks:
                 nav-heading: Penthouse
                 heading: Above the Ocean, Beyond the Ordinary
                 image: /uploads/regent-bali-ph.avif
+                image-focus-point:
+                    percent-from-left: 50
+                    percent-from-top: 50
                 imag-alt:
                 text: >-
                     Perched above the shoreline, the two-bedroom penthouse
@@ -261,6 +272,9 @@ blocks:
                 nav-heading: Events
                 heading: Exceptional Events, Rewarded
                 image: /uploads/regent-unite.avif
+                image-focus-point:
+                    percent-from-left: 36
+                    percent-from-top: 50
                 imag-alt:
                 text: >-
                     Save up to 10% and earn 3X points with IHG Business Rewards.
@@ -271,6 +285,9 @@ blocks:
                 nav-heading: Spa & Wellness
                 heading: Sense of harmony
                 image: /uploads/regent-bali-8738348469-original.avif
+                image-focus-point:
+                    percent-from-left: 0
+                    percent-from-top: 50
                 imag-alt:
                 text: >-
                     Serene and thoughtful, the Regent Spa taps into Bali’s
@@ -285,6 +302,9 @@ blocks:
                 nav-heading: Family Havens
                 heading: Timeless Stays, Shared Moments
                 image: /uploads/regent-balicanggu-familyhavens.avif
+                image-focus-point:
+                    percent-from-left: 46
+                    percent-from-top: 50
                 imag-alt:
                 text: >-
                     Crafted for togetherness, our family retreats combine
