Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -290,12 +290,13 @@ blocks:
                     percent-from-top: 50
                 imag-alt:
                 text: >-
-                    Serene and thoughtful, the Regent Spa taps into Bali’s
-                    wealth of health and wellness practices, offering scrubs,
-                    wraps and massages, as well as up-to-the-minute skincare
-                    treatments. The spa features seven restorative treatment
-                    rooms, including one indulgent couples suite, sauna, and
-                    plunge pool. Anticipated opening October 2025.
+                    Serene and thoughtful, Regent Spa & Wellness taps into
+                    Bali’s wealth of health and wellness practices, offering
+                    scrubs, wraps and massages, as well as up-to-the-minute
+                    skincare treatments. The Regent Spa & Wellness features
+                    seven restorative treatment rooms, including one indulgent
+                    couples suite, sauna, and plunge pool. Anticipated opening
+                    October 2025.
                 button-text: LEARN MORE
                 link: https://jazzy-boombox.cloudvent.net/Wellness.html
             -
